[gd_scene load_steps=22 format=2]

[ext_resource path="res://main_scenes/Star_Map.gd" type="Script" id=1]
[ext_resource path="res://auxiliary_scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/map_select.png" type="Texture" id=3]
[ext_resource path="res://gfx/station.png" type="Texture" id=4]
[ext_resource path="res://gfx/pirate_bay/map_pirate_bay.png" type="Texture" id=5]
[ext_resource path="res://gfx/electric_cloud/map_electric_cloud.png" type="Texture" id=6]
[ext_resource path="res://gfx/robotic_graveyard/map_robotic_graveyard.png" type="Texture" id=7]
[ext_resource path="res://gfx/darkest_reaches/map_darkest_reaches.png" type="Texture" id=8]
[ext_resource path="res://gfx/star_empire/map_star_empire.png" type="Texture" id=9]
[ext_resource path="res://gfx/spacetime_anomaly/map_spacetime_anomaly.png" type="Texture" id=10]
[ext_resource path="res://visitor.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://gfx/bullets/standard_loot_bullet.png" type="Texture" id=12]
[ext_resource path="res://auxiliary_scenes/Ship_Selector.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=8]

default_font = SubResource( 7 )

[node name="Star_Map" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="selector" type="Sprite" parent="." index="1"]

position = Vector2( 320, 320 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Station" type="Sprite" parent="." index="2"]

position = Vector2( 320, 320 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="pirate_bay" type="Sprite" parent="." index="3"]

position = Vector2( 504.972, 376.915 )
texture = ExtResource( 5 )

[node name="electric_cloud" type="Sprite" parent="." index="4"]

position = Vector2( 155.23, 398.906 )
texture = ExtResource( 6 )

[node name="robotic_graveyard" type="Sprite" parent="." index="5"]

position = Vector2( 111.007, 212.088 )
texture = ExtResource( 7 )

[node name="test" type="Sprite" parent="." index="6"]

position = Vector2( 314.842, 206.467 )
_sections_unfolded = [ "Transform" ]

[node name="darkest_reaches" type="Sprite" parent="." index="7"]

position = Vector2( 555.94, 561.357 )
texture = ExtResource( 8 )

[node name="star_empire" type="Sprite" parent="." index="8"]

position = Vector2( 178.008, 550.768 )
texture = ExtResource( 9 )

[node name="spacetime_anomaly" type="Sprite" parent="." index="9"]

position = Vector2( 511.142, 185.054 )
texture = ExtResource( 10 )

[node name="ui" type="Container" parent="." index="10"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="l0" type="Label" parent="ui" index="0"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="l1" type="Label" parent="ui" index="1"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 36.0
margin_right = 99.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Difficulty:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="l2" type="Label" parent="ui" index="2"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 62.0
margin_right = 99.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "objective:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="label_name" type="Label" parent="ui" index="3"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 10.0
margin_right = 420.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "Station"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility" ]

[node name="label_objective" type="Label" parent="ui" index="4"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 178.0
margin_top = 62.0
margin_right = 478.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 8 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="label_difficulty" type="Label" parent="ui" index="5"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 36.0
margin_right = 420.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 8 )
text = "Home"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="icon_objective" type="Sprite" parent="ui" index="6"]

position = Vector2( 144, 70 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( -48, 0, 48, 16 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Ship_Selector" parent="." index="11" instance=ExtResource( 13 )]

visible = false
position = Vector2( 320, 320 )
_sections_unfolded = [ "Transform", "Visibility" ]


